--- a/tf-styles.css
+++ b/tf-styles.css
@@ -82,11 +82,6 @@ src: url("font/SwedenSansBold.otf") format("opentype");
 	border-radius: 5px;
 }
 
-/*.container-1 div {
-	width: 50%;
-	margin: auto;
-}*/
-
 .container-1 .sect-1 {
 	width: 80%;
     margin: 0 auto;
@@ -108,7 +103,8 @@ src: url("font/SwedenSansBold.otf") format("opentype");
 }
 
 .container-1 .sect-2 .button {
-	background: #E40D4D;
+	background-color: #CC2B43;
+	// background: #E40D4D;
 	color: white;
 	border-radius: 5px;
 	padding: 10px;
@@ -157,7 +153,8 @@ src: url("font/SwedenSansBold.otf") format("opentype");
 	height: 500px;
 	color: white;
 	padding: 50px 0;
-	background-color: #E40D4D;
+	background-color: #CC2B43;
+	// background-color: #E40D4D;
 }
 
 .container-2 section {
@@ -166,7 +163,8 @@ src: url("font/SwedenSansBold.otf") format("opentype");
 	padding: 20px;
 	text-align: center;
 	float: left;
-	border-right: #E4507C 1px solid;
+	border-right: #D0596A 1px solid;
+	// border-right: #E4507C 1px solid;
 	line-height: 1.5;
 }
 
