--- a/tf-styles.css
+++ b/tf-styles.css
@@ -74,7 +74,7 @@ src: url("font/SwedenSansBold.otf") format("opentype");
 	// margin-top: 200px;
 	// color: #4A4041;
 	color: #1B0202;
-	background-color: rgba(255,255,255,.75);
+	background-color: rgba(253, 251, 249, 0.8);
 	padding: 50px;
 	width: 45%;
 	margin: 0 auto;
