--- a/tf-styles.css
+++ b/tf-styles.css
@@ -13,6 +13,12 @@ h1 {
 	font-family: 'Bree Serif', serif;
 }
 
+a {
+	text-decoration: none;
+	display: inline-block;
+	color: inherit;
+}
+
 @font-face {
 font-family: SwedenSans;
 src: url("font/SwedenSans.otf") format("opentype");
@@ -34,44 +40,43 @@ src: url("font/SwedenSansBold.otf") format("opentype");
 }
 
 .background-blur {
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
+  -webkit-filter: blur(2px);
+  -moz-filter: blur(2px);
+  -o-filter: blur(2px);
+  -ms-filter: blur(2px);
+  filter: blur(2px);
 }
 
-/*.background {
-	background-color: rgba(255,255,255,.4);
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	z-index: -1;
-}*/
+.content-wrapper {
+	border: 40px solid white;
+	padding-bottom: 200px;
+}
 
 .poster {
+	// border: 40px solid white;
+	// background: url("assets/floral-3.png");
 }
 
 .poster img {
 	
 }
 .poster .title {
-	width: 50%;
-	margin: 12% 25% 0;
+	width: 40%;
+	margin: 0 30% 0;
 }
 .poster .illo {
 	width: 600px;
-	margin-top: 150px;
 	margin-left: 30%;
 }
 
 .wrapper {
 	position: relative;
 	z-index: 1;
+	// margin-top: 10%;
+	// background: url("assets/background.jpg");
 }
 
 .container-1 {
-	// margin-top: 200px;
 	// color: #4A4041;
 	color: #1B0202;
 	background-color: rgba(253, 251, 249, 0.8);
@@ -91,7 +96,7 @@ src: url("font/SwedenSansBold.otf") format("opentype");
 .container-1 .sect-1 p {
 	font-size: 18px;
 	
-} 
+}
 
 .container-1 .sect-2 {
 	font-size: 30px;
@@ -101,12 +106,22 @@ src: url("font/SwedenSansBold.otf") format("opentype");
 	font-weight: normal;
 }
 
+.container-1 .sect-2 span {
+	padding: 0 30px;
+}
+
 .container-1 .sect-2 .button {
-	background-color: #CC2B43;
+	// background-color: #CC2B43;
 	// background: #E40D4D;
-	color: white;
+	border: 2px solid #E40D4D;
+	color: #E40D4D;
 	border-radius: 5px;
 	padding: 10px;
+}
+
+.container-1 .sect-2 a .button:hover {
+	background-color: #E40D4D;
+	color: white;
 }
 
 .container-1 h1 {
@@ -119,11 +134,11 @@ src: url("font/SwedenSansBold.otf") format("opentype");
 .container-1 .contributor {
 	width: 60%;
 	margin: 50px auto;
+	text-align: center;
 }
 
 .container-1 .contributor p {
 	margin-bottom: 5px;
-	// text-align: center;
 	font-size: 35px;
 	font-family: SwedenSans;
 	font-weight: bold;
@@ -144,52 +159,60 @@ src: url("font/SwedenSansBold.otf") format("opentype");
 }
 
 .container-2 {
-	margin-top: 200px;
 	font-size: 30px;
 	font-family: SwedenSans;
-	letter-spacing: 1px;
 	width: 100%;
-	height: 500px;
-	color: white;
-	padding: 50px 0;
-	background-color: #CC2B43;
-	// background-color: #E40D4D;
+	height: 400px;
+	color: #1B0202;
+	padding: 30px 0;
+	// background-color: #CC2B43;
+	background-color: #E40D4D;
+	max-width: 1200px;
+	margin: 0 auto;
 }
 
 .container-2 section {
-	width: 30%;
-	height: 450px;
-	padding: 20px;
+	width: 33%;
+	height: 400px;
 	text-align: center;
 	float: left;
-	border-right: #D0596A 1px solid;
-	// border-right: #E4507C 1px solid;
+	// border-right: #D0596A 1px solid;
+	border-right: #9C0532 1px solid;
 	line-height: 1.5;
 }
 
 .container-2 section:nth-child(3) {
+	border-right: none;
+}
+
+.container-2 p {
+	font-weight: bold;
+	letter-spacing: 0;
+}
+
+.container-2 .logo {
+	margin-bottom: 20px;
+}
+
+.container-2 .logo a:hover {
+	opacity: .5;
+}
+
+/*.container-2 section:nth-child(3) {
 	border: none;
 	font-family: 'Average', serif;
 	text-align: left;
 	font-size: 14px;
 	line-height: 1.25;
 	font-weight: normal;
-}
-
-.container-2 .col-1 .logo:last-child {
-	margin-top: 30px;
-}
+}*/
 
 footer {
 	width: 100%;
-	position: absolute;
-	padding: 20px 0;
-	font-family: 'Average', serif;
-	font-size: 16px;
-    line-height: 1.25;
+	background-color: #E40D4D;
 }
 
-footer .col-1 {
+/*footer .col-1 {
 	width: 30%;
 	float: left;
 	text-align: center;
@@ -198,7 +221,7 @@ footer .col-2 {
 	width: 70%;
 	float: left;
 
-}
+}*/
 
 
 
