--- a/tf-styles.css
+++ b/tf-styles.css
@@ -1,8 +1,9 @@
 
 body {
 	margin: 0;
-	background-color: #FCF5EF;
+	background: #FCF5EF url("assets/floral-3.png");
 	-webkit-font-smoothing: antialiased;
+	position: relative;
 }
 p {
 	font-weight: normal;
@@ -30,31 +31,37 @@ font-weight: bold;
 src: url("font/SwedenSansBold.otf") format("opentype");
 }
 
-
-.background {
+body.background-blur:before {
+	content: " ";
+	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: url("assets/floral-3.png");
-	position: fixed;
 	z-index: -1;
-}
+	background: inherit;
+	background-size: inherit;
+	  
+	  -webkit-filter: blur(2px);
+	  -moz-filter: blur(2px);
+	  -o-filter: blur(2px);
+	  -ms-filter: blur(2px);
+	  filter: blur(2px);
 
-.background-blur {
-  -webkit-filter: blur(2px);
-  -moz-filter: blur(2px);
-  -o-filter: blur(2px);
-  -ms-filter: blur(2px);
-  filter: blur(2px);
+	  transition        : all 2s linear;
+	  -moz-transition   : all 2s linear;
+	  -webkit-transition: all 2s linear;
+	  -o-transition     : all 2s linear;
+
+
 }
 
 .content-wrapper {
 	border: 40px solid white;
 	padding-bottom: 200px;
+	position: relative;
 }
 
 .poster {
-	// border: 40px solid white;
-	// background: url("assets/floral-3.png");
+	position: relative;
 }
 
 .poster img {
@@ -154,12 +161,12 @@ src: url("font/SwedenSansBold.otf") format("opentype");
 	text-transform: none;
 }
 
-.container-1 .contributor span .logo svg {
+.container-1 .contributor span .icon svg {
 	width: 30px;
 }
 
 .container-2 {
-	font-size: 30px;
+	font-size: 25px;
 	font-family: SwedenSans;
 	width: 100%;
 	height: 400px;
@@ -167,8 +174,9 @@ src: url("font/SwedenSansBold.otf") format("opentype");
 	padding: 30px 0;
 	// background-color: #CC2B43;
 	background-color: #E40D4D;
-	max-width: 1200px;
+	max-width: 960px;
 	margin: 0 auto;
+	
 }
 
 .container-2 section {
@@ -179,6 +187,8 @@ src: url("font/SwedenSansBold.otf") format("opentype");
 	// border-right: #D0596A 1px solid;
 	border-right: #9C0532 1px solid;
 	line-height: 1.5;
+	padding: 0 20px;
+	box-sizing: border-box;
 }
 
 .container-2 section:nth-child(3) {
@@ -224,5 +234,140 @@ footer .col-2 {
 }*/
 
 
+
+
+@media (max-width: 600px) {
+
+body {
+	margin: 0;
+	background: #FCF5EF url("assets/floral-3.png");
+	background-size: 80%;
+	-webkit-font-smoothing: antialiased;
+	position: relative;
+}
+
+
+
+.content-wrapper {
+	border: 15px solid white;
+	padding-bottom: 200px;
+}
+
+.poster {
+	height: 100%;
+}
+
+.poster .title {
+	width: 100%;
+	margin: 50px 0 0 0;
+}
+.poster .illo {
+	width: 100%;
+    margin: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.container-1 {
+	padding: 15px;
+    width: 80%;
+    box-sizing: border-box;
+	margin: 0 auto;
+	border-radius: 5px;
+}
+
+.container-1 .sect-1 {
+	width: 80%;
+    margin: 0 auto;
+    line-height: 1.5;
+    text-align: center;
+}
+
+.container-1 .sect-1 p {
+	font-size: 18px;
+	
+}
+
+.container-1 .sect-2 {
+	font-size: 18px;
+	text-align: center;
+	font-family: SwedenSans;
+	margin: 100px 0;
+	font-weight: normal;
+}
+
+.container-1 .sect-2 span {
+	padding: 0;
+}
+
+.container-1 .sect-2 .button {
+	border: 2px solid #E40D4D;
+	color: #E40D4D;
+	border-radius: 5px;
+	padding: 10px;
+}
+
+.container-1 .sect-2 a .button:hover {
+	background-color: #E40D4D;
+	color: white;
+}
+
+.container-1 h1 {
+	font-family: 'Bree Serif', serif;
+	text-align: center;
+	font-size: 30px;
+	margin: 100px 0 10px 0;
+}
+
+.container-1 .contributor {
+	width: 100%;
+	margin: 30px auto;
+	text-align: center;
+}
+
+.container-1 .contributor p {
+	font-size: 20px;
+}
+
+.container-1 .contributor p:nth-child(2) {
+	font-size: 14px;
+}
+
+.container-1 .contributor span .icon svg {
+	width: 18px;
+}
+
+.container-2 {
+	width: 100%;
+	height: inherit;
+	// padding: 30px 0;
+	
+}
+
+.container-2 section {
+	width: 100%;
+	height: inherit;
+	float: none;
+	border-right: none;
+	border-bottom: #9C0532 1px solid;
+	border-width: 30%;
+}
+
+.container-2 section:nth-child(3) {
+	border-bottom: none;
+}
+
+.container-2 .logo {
+	margin-bottom: 20px;
+}
+
+
+
+}
+
+
+@media (max-width: 800px)
+@media (max-width: 800px)
 
 
