--- a/tf-styles2.css
+++ b/tf-styles2.css
@@ -1,7 +1,6 @@
 
 body {
 	margin: 0;
-	background: #FCF5EF url("assets/floral-3.png");
 	-webkit-font-smoothing: antialiased;
 	position: relative;
 }
@@ -31,7 +30,7 @@ font-weight: bold;
 src: url("font/SwedenSansBold.otf") format("opentype");
 }
 
-body.background-blur:before {
+/*body.background-blur:before {
 	content: " ";
 	position: absolute;
 	width: 100%;
@@ -53,15 +52,16 @@ body.background-blur:before {
 	  -o-transition: 3s -o-filter linear;
 
 
-}
+}*/
 
 .content-wrapper {
-	border: 40px solid white;
 	position: relative;
 }
 
 .poster {
+	border: 40px solid white;
 	position: relative;
+	background: #FCF5EF url("assets/floral-3.png")  -10px -150px;
 }
 
 .poster img {
@@ -77,11 +77,10 @@ body.background-blur:before {
 }
 
 .wrapper {
-	padding: 0 0 200px 0;
 	position: relative;
 	z-index: 1;
-	// margin-top: 10%;
-	// background: url("assets/background.jpg");
+	background: url("assets/background.jpg");
+	padding: 200px 0;
 }
 
 .container-1 {
@@ -164,6 +163,11 @@ body.background-blur:before {
 	width: 25px;
 }
 
+.fa-external-link.fa-2x {
+	font-size: 1.5em;
+	color: #887C7E;
+}
+
 .container-2 {
 	font-size: 25px;
 	font-family: SwedenSans;
@@ -171,7 +175,6 @@ body.background-blur:before {
 	height: 400px;
 	color: #1B0202;
 	padding: 30px 0;
-	// background-color: #CC2B43;
 	background-color: #E40D4D;
 	max-width: 960px;
 	margin: 0 auto;
@@ -194,16 +197,6 @@ body.background-blur:before {
 	border-right: none;
 }
 
-.container-2 section:nth-child(3) .icon {
-	width: 40px;
-	display: inline-block;
-}
-
-.fa-external-link.fa-2x {
-	font-size: 1.5em;
-	color: #887C7E;
-}
-
 .container-2 p {
 	font-weight: bold;
 	letter-spacing: 0;
@@ -217,6 +210,14 @@ body.background-blur:before {
 	opacity: .5;
 }
 
+/*.container-2 section:nth-child(3) {
+	border: none;
+	font-family: 'Average', serif;
+	text-align: left;
+	font-size: 14px;
+	line-height: 1.25;
+	font-weight: normal;
+}*/
 
 footer {
 	width: 100%;
@@ -241,21 +242,16 @@ footer .col-2 {
 
 body {
 	margin: 0;
-	background: #FCF5EF url("assets/floral-3.png");
-	background-size: 80%;
 	-webkit-font-smoothing: antialiased;
 	position: relative;
 }
 
 
-
-.content-wrapper {
-	border: 15px solid white;
-	padding-bottom: 200px;
-}
-
 .poster {
+	background: #FCF5EF url("assets/floral-3.png");
+	background-size: 80%;
 	height: 100%;
+	border: 15px solid white;
 }
 
 .poster .title {
