--- a/tf-styles2.css
+++ b/tf-styles2.css
@@ -81,6 +81,7 @@ src: url("font/SwedenSansBold.otf") format("opentype");
 	z-index: 1;
 	background: url("assets/background.jpg");
 	padding: 200px 0;
+	background-size: 100%;
 }
 
 .container-1 {
@@ -265,6 +266,8 @@ body {
     bottom: 0;
     left: 0;
 }
+
+
 
 .container-1 {
 	padding: 15px;
