--- a/tf-styles.css
+++ b/tf-styles.css
@@ -81,7 +81,7 @@ body.background-blur:before {
 	// padding: 0 0 200px 0;
 	position: relative;
 	background:  url("assets/background.jpg");
-	background-size: 100%;
+	background-size: contain;
 	z-index: 1;
 }
 
