--- a/tf-styles.css
+++ b/tf-styles.css
@@ -127,13 +127,12 @@ body.background-blur:before {
 	padding-top: 10px;
 	display: block;
 	text-align: center;
-	font-size: 30px;
+	font-size: 2.5em;
 	letter-spacing: 1px;
 	margin: 50px auto;
 }
 
 .container-1 .contributor {
-	width: 60%;
 	margin: 50px auto;
 	text-align: center;
 }
@@ -150,7 +149,6 @@ body.background-blur:before {
 .container-1 .contributor p:nth-child(2) {
 	font-size: 16px;
 	color: #1B0202;
-	// color: #5F5153;
 	margin: 0;
 	margin-bottom: 5px;
 	font-weight: normal;
@@ -193,7 +191,12 @@ body.background-blur:before {
 }
 
 .container-2 section.col-2 p {
-	font-size: 30px;
+	font-size: 22px;
+	font-weight: normal;
+}
+.container-2 section.col-2 a {
+	font-weight: bold;
+	letter-spacing: 2px;
 }
 
 .container-2 section:nth-child(3) {
@@ -210,12 +213,11 @@ body.background-blur:before {
 	color: #887C7E;
 }
 
-
 .container-2 .logo {
 	margin-bottom: 20px;
 }
 
-.container-2 .logo a:hover {
+.container-2 a:hover {
 	opacity: .5;
 }
 
@@ -333,8 +335,6 @@ body {
 .container-2 {
 	width: 100%;
 	height: inherit;
-	// padding: 30px 0;
-	
 }
 
 .container-2 section {
