--- a/tf-styles.css
+++ b/tf-styles.css
@@ -161,23 +161,24 @@ body.background-blur:before {
 }
 
 .container-2 {
-	font-size: 25px;
 	font-family: SwedenSans, sans-serif;
 	width: 100%;
 	height: 400px;
 	color: #1B0202;
 	padding: 30px 0;
-	// background-color: #CC2B43;
 	background-color: #FB607F;
 	max-width: 960px;
 	margin: 0 auto;
 	
 }
 
-.container-2 p {
+.container-2 h1 {
+	font-size: 25px;
 	font-weight: bold;
-	letter-spacing: 1;
+	letter-spacing: 1px;
+	margin-bottom: 10px;
 }
+
 
 .container-2 section {
 	width: 33%;
@@ -185,27 +186,29 @@ body.background-blur:before {
 	text-align: center;
 	float: left;
 	border-right: #1B0202 1px solid;
-	line-height: 1.5;
+	line-height: 1.25;
 	padding: 0 20px;
 	box-sizing: border-box;
 }
 
+.container-2 section.col-2 {
+	text-align: left;
+}
 .container-2 section.col-2 p {
 	font-size: 18px;
 	font-weight: normal;
 	line-height: 1.25;
-	text-align: left;
 }
 .container-2 section.col-2 a {
 	font-weight: bold;
 	letter-spacing: 1px;
 }
 
-.container-2 section:nth-child(3) {
+.container-2 section.col-3 {
 	border-right: none;
 }
 
-.container-2 section:nth-child(3) a {
+.container-2 section.col-3 a {
 	width: 40px;
 	display: block;
 }
