--- a/tf-styles.css
+++ b/tf-styles.css
@@ -185,7 +185,7 @@ body.background-blur:before {
 	height: 400px;
 	text-align: center;
 	float: left;
-	border-right: #1B0202 1px solid;
+	border-right: rgba(27, 2, 2, 0.2) 1px solid;
 	line-height: 1.25;
 	padding: 0 20px;
 	box-sizing: border-box;
