updates mobile styles

--- a/tf-styles.css
+++ b/tf-styles.css
@@ -1,11 +1,9 @@
 
 body {
 	margin: 0;
-	background: #fcf4ee;
 	-webkit-font-smoothing: antialiased;
 	position: relative;
-	background:  url("assets/background.jpg") 80px 90px;
-	background-size: 150%;
+	background: #fcf4ee url("assets/floral-iso.png") -45px -60px;
 }
 p {
 	font-weight: normal;
@@ -45,6 +43,7 @@ body.background-blur:before {
 
 .content-wrapper {
 	position: relative;
+	width: 100%
 }
 
 .poster {
@@ -121,15 +120,21 @@ body.background-blur:before {
 	color: white;
 }
 
+.container-1 .sect-3 a:hover {
+	opacity: .5;
+}
+
 .container-1 h1 {
-	border-top: 2px solid black;
-	border-bottom: 2px solid black;
-	padding-top: 10px;
 	display: block;
 	text-align: center;
 	font-size: 2.5em;
 	letter-spacing: 1px;
 	margin: 50px auto;
+}
+.container-1 .sect-3 h1 span {
+	border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    padding-top: 10px;
 }
 
 .container-1 .contributor {
@@ -158,6 +163,23 @@ body.background-blur:before {
 
 .container-1 .contributor .icon svg {
 	width: 25px;
+}
+.fa-globe.fa-2x {
+	font-size: 1.75em;
+	color: #1B0202;
+	display: inline-block;
+	position: relative;
+    top: -3px;
+
+}
+
+.fa-wikipedia-w.fa-2x {
+	font-size: 1.4em;
+	color: #1B0202;
+	display: inline-block;
+	position: relative;
+    top: -4px;
+
 }
 
 .container-2 {
@@ -191,9 +213,9 @@ body.background-blur:before {
 	box-sizing: border-box;
 }
 
-.container-2 section.col-2 {
-	text-align: left;
-}
+/*.container-2 section.col-2 {
+	text-align: center;
+}*/
 .container-2 section.col-2 p {
 	font-size: 18px;
 	font-weight: normal;
@@ -203,27 +225,35 @@ body.background-blur:before {
 	font-weight: bold;
 	letter-spacing: 1px;
 }
+.container-2 section.col-2 h1, .container-2 section.col-3 h1 {
+	 margin-top: 30px;
+	 margin-bottom: 40px;
+}
 
 .container-2 section.col-3 {
 	border-right: none;
 }
 
 .container-2 section.col-3 a {
-	width: 40px;
+	width: 30px;
 	display: block;
+	margin: 1.5em auto;
 }
 
-.fa-external-link.fa-2x {
-	font-size: 1.5em;
-	color: #887C7E;
+.fa-envelope.fa-2x {
+	font-size: 28px;
 }
 
 .container-2 .logo {
-	margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .container-2 a:hover {
 	opacity: .5;
+}
+
+.container-2 section.col-3 .social {
+	margin-top: 50px;
 }
 
 footer {
@@ -235,140 +265,188 @@ footer {
 
 
 
+
+
+
+
+@media (max-width: 720px) {
+
+}
+@media (max-width: 960px) {
+	.container-1 {
+		width: 55%
+	}
+}
+
+
+
 @media (max-width: 500px) {
 
 body {
 	margin: 0;
-	background: #FCF5EF url("assets/floral-3.png");
-	background-size: 80%;
 	-webkit-font-smoothing: antialiased;
 	position: relative;
+	background: #fcf4ee url("assets/floral-iso.png") -45px -60px;
 }
 
 
-
-.content-wrapper {
-	border: 15px solid white;
-	padding-bottom: 200px;
-}
-
-.poster {
-	height: 100%;
-}
-
-.poster .title {
+.poster img {
 	width: 100%;
-	margin: 50px 0 0 0;
+	height: auto;
+	margin: 0 auto;
+	display: block;
+
 }
-.poster .illo {
-	width: 100%;
-    margin: 0;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
+
 
 .container-1 {
-	padding: 15px;
-    width: 80%;
-    box-sizing: border-box;
-	margin: 0 auto;
+	color: #1B0202;
+	background-color: rgba(253, 251, 249, 0.8);
+	padding: 30px 30px;
+	width: 75%;
+	margin: 75px auto;
 	border-radius: 5px;
 }
 
 .container-1 .sect-1 {
 	width: 80%;
     margin: 0 auto;
-    line-height: 1.5;
+    line-height: 1.75;
     text-align: center;
+    font-size: 22px;
+	font-family: SwedenSans, sans-serif;
 }
 
 .container-1 .sect-1 p {
 	font-size: 18px;
-	
 }
 
 .container-1 .sect-2 {
-	font-size: 18px;
-	text-align: center;
-	font-family: SwedenSans;
-	margin: 100px 0;
-	font-weight: normal;
+    font-size: 18px;
+    text-align: center;
+    font-family: SwedenSans;
+    margin: 100px 0;
+    font-weight: normal;
 }
 
 .container-1 .sect-2 span {
-	padding: 0;
+	padding: 0 10px;
+}
+.container-1 .sect-2 p {
+	margin-bottom: 50px;
 }
 
 .container-1 .sect-2 .button {
-	border: 2px solid #E40D4D;
-	color: #E40D4D;
+	border: 2px solid #FB607F;
+	color: #FB607F;
 	border-radius: 5px;
 	padding: 10px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-size: 20px;
 }
 
-.container-1 .sect-2 a .button:hover {
-	background-color: #E40D4D;
-	color: white;
-}
 
 .container-1 h1 {
-	font-family: 'Bree Serif', serif;
-	text-align: center;
-	font-size: 30px;
-	margin: 100px 0 10px 0;
+    text-align: center;
+    font-size: 30px;
+    margin: 100px 0 10px 0;
 }
 
 .container-1 .contributor {
-	width: 100%;
-	margin: 30px auto;
+	margin: 50px auto;
 	text-align: center;
 }
 
 .container-1 .contributor p {
-	font-size: 20px;
+	font-size: 20px
 }
 
 .container-1 .contributor p:nth-child(2) {
 	font-size: 14px;
 }
 
-.container-1 .contributor span .icon svg {
-	width: 18px;
+.container-1 .contributor .icon svg {
+	width: 25px;
+}
+.fa-globe.fa-2x {
+	font-size: 1.75em;
+	color: #1B0202;
+	display: inline-block;
+	position: relative;
+    top: -3px;
+
+}
+
+.fa-wikipedia-w.fa-2x {
+	font-size: 1.4em;
+	color: #1B0202;
+	display: inline-block;
+	position: relative;
+    top: -4px;
+
 }
 
 .container-2 {
 	width: 100%;
-	height: inherit;
+    height: inherit;
 }
+
+.container-2 h1 {
+	font-size: 25px;
+	font-weight: bold;
+	letter-spacing: 1px;
+	margin-bottom: 10px;
+}
+
 
 .container-2 section {
-	width: 100%;
-	height: inherit;
-	float: none;
+    width: 100%;
+    height: inherit;
+    float: none;
+    border-right: none;
+}
+
+.container-2 section.col-2 p {
+	font-size: 18px;
+	font-weight: normal;
+	line-height: 1.25;
+}
+.container-2 section.col-2 a {
+	font-weight: bold;
+	letter-spacing: 1px;
+}
+.container-2 section.col-2 h1, .container-2 section.col-3 h1 {
+	 margin-top: 30px;
+	 margin-bottom: 40px;
+}
+
+.container-2 section.col-3 {
 	border-right: none;
-	border-bottom: #9C0532 1px solid;
-	border-width: 30%;
 }
 
-.container-2 section:nth-child(2) {
-	
+.container-2 section.col-3 a {
+	width: 30px;
+	display: block;
+	margin: 1.5em auto;
 }
 
-.container-2 section:nth-child(3) {
-	border-bottom: none;
+.fa-envelope.fa-2x {
+	font-size: 28px;
 }
 
 .container-2 .logo {
-	margin-bottom: 20px;
+    margin-bottom: 20px;
+}
+
+.container-2 section.col-3 .social {
+	margin-top: 50px;
+}
+
+
 }
 
 
 
-}
-
-
-@media (max-width: 800px)
-@media (max-width: 800px)
 
 
